--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "API"
   ],
   "author": "Vijay Sasinathan <vj@intelnut.com> (https://intelnut.com/)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "next": "^10.0.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
