--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
   "author": "Vijay Sasinathan <vj@intelnut.com> (https://intelnut.com/)",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "busboy": "^0.3.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase": "^8.2.9",
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
