--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-replace": "^1.0.0",
+    "gulp-run-command": "^0.0.10"
   }
 }
