--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "firebase-tools": "^9.5.0",
     "gulp": "^4.0.2",
     "gulp-replace": "^1.0.0",
     "gulp-run-command": "^0.0.10"
