--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.4",
     "firebase-tools": "^9.5.0",
     "gulp": "^4.0.2",
     "gulp-replace": "^1.0.0",
-    "gulp-run-command": "^0.0.10"
+    "gulp-run-command": "^0.0.10",
+    "postcss": "^8.2.6",
+    "tailwindcss": "^2.0.3"
   }
 }
