--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "gulp": "^4.0.2",
     "gulp-replace": "^1.0.0",
     "gulp-run-command": "^0.0.10",
+    "next-sitemap": "^1.5.8",
     "postcss": "^8.2.6",
+    "pwa-asset-generator": "^4.1.1",
     "tailwindcss": "^2.0.3"
   }
 }
