--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Vijay Sasinathan <vj@intelnut.com> (https://intelnut.com/)",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
     "cors": "^2.8.5",
