gulp pwa -> generate PWA assets renamed gulp properties -> gulp config

--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,10 @@
 # Rename this to .env and update the properties
 
-# Production endpoint of the application. Ex:https://kuvempu.intelnut.com
-APPLICATION_URL=<application_url>
+APPLICATION_URL=https://kuvempu.intelnut.com
+APPLICATION_NAME=Kuvempu - Kickstart your Next.js and Firebase project
+APPLICATION_SHORT_NAME=Kuvempu
+APPLICATION_DESCRIPTION=Kuvempu helps you build fast, robust, adaptable and high performant PWA web apps powered by NextJs and Google Cloud Firebase
+APPLICATION_THEME_COLOR=#434343
+APPLICATION_BACKGROUND_COLOR=#FFFFFF
+APPLICATION_DISPLAY=standalone
+APPLICATION_START_URL='/'
