Property attribute to enable PWA

--- a/sample.env
+++ b/sample.env
@@ -8,3 +8,5 @@ APPLICATION_THEME_COLOR=#434343
 APPLICATION_BACKGROUND_COLOR=#FFFFFF
 APPLICATION_DISPLAY=standalone
 APPLICATION_START_URL='/'
+
+ENABLE_PWA=true
