--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp": "^4.0.2",
     "gulp-replace": "^1.0.0",
     "gulp-run-command": "^0.0.10",
+    "next-pwa": "^5.0.6",
     "next-sitemap": "^1.5.8",
     "postcss": "^8.2.6",
     "pwa-asset-generator": "^4.1.1",
