Gulp task to run consumer dev server from the root

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ src/consumer/public/brand
 src/consumer/public/sw.js
 src/consumer/public/workbox*.js
 src/consumer/next-sitemap.js
+src/consumer/lib
