--- a/src/consumer/package.json
+++ b/src/consumer/package.json
@@ -25,6 +25,7 @@
     "webpack-subresource-integrity": "^1.5.2"
   },
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build"
   }
 }
