Update sample env

--- a/sample.env
+++ b/sample.env
@@ -1,10 +1,10 @@
 # Rename this to .env and update the properties
 
-APPLICATION_URL=https://kuvempu.intelnut.com
-APPLICATION_NAME=Kuvempu - Kickstart your Next.js and Firebase project
-APPLICATION_SHORT_NAME=Kuvempu
-APPLICATION_DESCRIPTION=Kuvempu helps you build fast, robust, adaptable and high performant PWA web apps powered by NextJs and Google Cloud Firebase
-APPLICATION_THEME_COLOR=#434343
-APPLICATION_BACKGROUND_COLOR=#FFFFFF
-APPLICATION_DISPLAY=standalone
-APPLICATION_START_URL='/'
+CONSUMER_URL=https://kuvempu.intelnut.com
+CONSUMER_PWA_START_URL=/
+CONSUMER_PWA_NAME=Kuvempu
+CONSUMER_PWA_SHORT_NAME=Kuvempu
+CONSUMER_PWA_DESCRIPTION=Kuvempu helps you build fast, robust, adaptable and high performant PWA web apps powered by NextJs and Google Cloud Firebase
+CONSUMER_PWA_THEME_COLOR=#434343
+CONSUMER_PWA_BACKGROUND_COLOR=#FFFFFF
+CONSUMER_PWA_DISPLAY=standalone
