--- a/src/consumer/package.json
+++ b/src/consumer/package.json
@@ -2,6 +2,7 @@
   "name": "kuvempu-consumer",
   "version": "1.0.0",
   "dependencies": {
+    "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
@@ -11,18 +12,23 @@
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2",
     "next": "^10.0.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.2.4",
-    "firebase-tools": "^9.5.0",
     "next-pwa": "^5.0.6",
     "next-secure-headers": "^2.2.0",
-    "next-sitemap": "^1.5.8",
-    "postcss": "^8.2.6",
+    "postcss": "^8.2.8",
+    "postcss-preset-env": "^6.7.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.3",
     "webpack-subresource-integrity": "^1.5.2"
+  },
+  "devDependencies": {
+    "firebase-tools": "^9.5.0",
+    "next-sitemap": "^1.5.8",
+    "webpack": "^4.44.2"
+  },
+  "main": "functions.js",
+  "engines": {
+    "node": "12"
   },
   "scripts": {
     "dev": "next dev",
