--- a/src/rest/firebase.json
+++ b/src/rest/firebase.json
@@ -9,7 +9,7 @@
         "rewrites": [
             {
                 "source": "**",
-                "function": "consumer"
+                "function": "rest"
             }
         ]
     },
