--- a/scripts/templates/firebase.json
+++ b/scripts/templates/firebase.json
@@ -1,5 +1,6 @@
 {
     "hosting": {
+        "target": "/*TARGET*/",
         "public": "./public",
         "ignore": [
             "firebase.json",
@@ -14,7 +15,7 @@
         ]
     },
     "functions": {
-        "source": "."
-    },
-    "runtime": "nodejs12"
+        "source": ".",
+        "runtime": "nodejs12"
+    }
 }
