--- a/src/consumer/firebase.json
+++ b/src/consumer/firebase.json
@@ -1,5 +1,6 @@
 {
     "hosting": {
+        "target": "consumer",
         "public": "./public",
         "ignore": [
             "firebase.json",
