--- a/src/rest/package.json
+++ b/src/rest/package.json
@@ -9,6 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2"
+  },
+  "engines": {
+    "node": "12"
+  },
+  "devDependencies": {
+    "firebase-tools": "^9.6.1"
   }
 }
