Modified hosting setup task to accommodate Admin app which does not require rewrites. Public will host angular app.

--- a/src/admin/firebase.json
+++ b/src/admin/firebase.json
@@ -1,17 +1,11 @@
 {
   "hosting": {
-    "target": "consumer",
+    "target": "admin",
     "public": "./public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "function": "consumer"
-      }
     ]
   },
   "functions": {
