--- a/src/rest/package.json
+++ b/src/rest/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-json-validator-middleware": "^2.1.1",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2"
   },
