Gulp task to run local rest server. Postman test run successful.

--- a/src/rest/package.json
+++ b/src/rest/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "functions.js",
   "scripts": {
+    "dev": "firebase emulators:start --only functions",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
