--- a/src/rest/package.json
+++ b/src/rest/package.json
@@ -2,7 +2,7 @@
   "name": "rest",
   "version": "1.0.0",
   "description": "",
-  "main": "functions.js",
+  "main": "index.js",
   "scripts": {
     "dev": "firebase emulators:start --only functions",
     "test": "echo \"Error: no test specified\" && exit 1"
