--- a/src/rest/package.json
+++ b/src/rest/package.json
@@ -20,6 +20,7 @@
     "node": "12"
   },
   "devDependencies": {
+    "firebase-functions-test": "^0.2.3",
     "firebase-tools": "^9.6.1",
     "jest": "^26.6.3"
   }
