--- a/src/admin/package.json
+++ b/src/admin/package.json
@@ -4,6 +4,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "firebase": "^8.2.9",
