--- a/src/admin/package.json
+++ b/src/admin/package.json
@@ -1,7 +1,6 @@
 {
   "name": "admin",
   "version": "0.0.0",
-  "scripts": {},
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -20,5 +19,9 @@
     "firebase-tools": "^9.5.0",
     "webpack": "^4.44.2"
   },
-  "main": "functions.js"
+  "main": "functions.js",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build"
+  }
 }
