--- a/src/admin/package.json
+++ b/src/admin/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "firebase": "^8.2.9",
@@ -13,6 +14,7 @@
     "next-secure-headers": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "recharts": "^2.0.9",
     "webpack-subresource-integrity": "^1.5.2"
   },
   "devDependencies": {
