--- a/src/admin/package.json
+++ b/src/admin/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "firebase": "^8.2.9",
+    "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2",
     "next": "^10.0.7",
     "next-pwa": "^5.0.6",
