--- a/sample.env
+++ b/sample.env
@@ -2,6 +2,7 @@
 ADMIN_RESOURCE_ID=
 ADMIN_SUPER_USER_EMAIL=
 ADMIN_SUPER_USER_PASSWORD=
+ADMIN_URL=
 
 // C
 CONSUMER_URL=
@@ -33,6 +34,7 @@ FIREBASE_SA_CLIENT_X509_CERT_URL=
 
 // R
 REST_RESOURCE_ID=
+REST_URL=
 
 // S
 SUPER_ADMIN_EMAIL_ID=
