--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 # Dependency directories
 dist/
 node_modules/
-**/environment
+**/environment/*.environment.json
 src/consumer/public/manifest.json
 src/consumer/public/brand
 src/consumer/public/sw.js
