--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp-replace": "^1.0.0",
     "gulp-run-command": "^0.0.10",
     "pwa-asset-generator": "^4.1.1"
+  },
+  "dependencies": {
+    "react-router-dom": "^5.2.0"
   }
 }
