Moved nextjs codebase and fb function to src

--- a/src/rest/package.json
+++ b/src/rest/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "firebase emulators:start --only functions",
+    "build": "echo \"Nothing to build in Rest Service\"",
     "test": "jest"
   },
   "author": "",
