--- a/src/consumer/package.json
+++ b/src/consumer/package.json
@@ -26,7 +26,7 @@
     "next-sitemap": "^1.5.8",
     "webpack": "^4.44.2"
   },
-  "main": "functions.js",
+  "main": "./src/functions.js",
   "engines": {
     "node": "12"
   },
