--- a/src/rest/package.json
+++ b/src/rest/package.json
@@ -2,7 +2,7 @@
   "name": "rest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "dev": "firebase emulators:start --only functions",
     "build": "echo \"Nothing to build in Rest Service\"",
