--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,12 @@
 dist/
 node_modules/
 **/environment/*.environment.json
-src/consumer/src/public/manifest.json
-src/consumer/src/public/sw.js
-src/consumer/src/public/workbox*.js
-src/**/lib
-src/**/.firebase
-src/**/.firebaserc
-src/**/firebase.json
+**/public/sw.js
+**/public/workbox*.js
+**/lib
+**/.firebase
+**/.firebaserc
+**/firebase.json
 **/firebase-debug.log
 **/ui-debug.log
-src/admin/build
+**/build
