--- a/src/consumer/firebase.json
+++ b/src/consumer/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "target": "consumer",
-    "public": "./public",
+    "public": "./src/public",
     "ignore": [
       "firebase.json",
       "**/.*",
