--- a/src/consumer/package.json
+++ b/src/consumer/package.json
@@ -32,6 +32,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build ./src",
+    "postbuild": "next-sitemap"
   }
 }
