Updated gulp-pwa to copy logo to brand and specify background for splash and icon.

--- a/sample.env
+++ b/sample.env
@@ -1,10 +1,20 @@
 // A
+ADMIN_BRAND_LOGO_PATH=./brand/logo.svg
+ADMIN_BRAND_ICON_PATH=./brand/icon.svg
+ADMIN_BRAND_SPLASH_PATH=./brand/logo.svg
+ADMIN_BRAND_SPLASH_BACKGROUND=linear-gradient(to right, #d7ccc8 0%, #ffd180 100%)
+ADMIN_BRAND_ICON_BACKGROUND=linear-gradient(to right, #d7ccc8 0%, #ffd180 100%)
 ADMIN_FIREBASE_CONFIG_APP_ID=
 ADMIN_FIREBASE_CONFIG_MEASUREMENT_ID=
 ADMIN_RESOURCE_ID=
 ADMIN_URL=
 
 // C
+CONSUMER_BRAND_LOGO_PATH=./brand/logo.svg
+CONSUMER_BRAND_ICON_PATH=./brand/icon.svg
+CONSUMER_BRAND_SPLASH_PATH=./brand/logo.svg
+CONSUMER_BRAND_SPLASH_BACKGROUND=linear-gradient(to right, #aed581 0%, #f4ff81 100%)
+CONSUMER_BRAND_ICON_BACKGROUND=linear-gradient(to right, #aed581 0%, #f4ff81 100%)
 CONSUMER_FIREBASE_CONFIG_APP_ID=
 CONSUMER_FIREBASE_CONFIG_MEASUREMENT_ID=
 CONSUMER_URL=
