Update logo path in consumer

--- a/src/consumer/package.json
+++ b/src/consumer/package.json
@@ -31,7 +31,7 @@
     "node": "12"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev ./src",
     "build": "next build ./src",
     "postbuild": "next-sitemap"
   }
