Adding develop CI yml to test actions

--- a/src/admin/package.json
+++ b/src/admin/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "echo \"ToDo Admin Tests\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
