--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x, 14.x]
 
     env: 
       ADMIN_FIREBASE_CONFIG_APP_ID: ${{ secrets.ADMIN_FIREBASE_CONFIG_APP_ID }}
