--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -48,9 +48,16 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install
-      run: 
+      run: |
         sudo npm install --global firebase-tools
         npm ci
-    
+    - name: Setup Properties
+      run: gulp setup:env
+    - name: Run REST Tests
+      run: gulp test:rest
+    - name: Run ADMIN Tests
+      run: gulp test:admin
+    - name: Run CONSUMER Tests
+      run: gulp test:admin
     
 
