Changing branch back to Develop

--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -1,8 +1,9 @@
 name: Develop CI
 
 on:
+  pull_request:
   push:
-    branches: [ CI-Develop-Branch-#25 ]
+    branches: [ Develop ]
 
 jobs:
   CI:
