This is tougher than coding

--- a/sample.env
+++ b/sample.env
@@ -19,13 +19,13 @@ CONSUMER_FIREBASE_CONFIG_APP_ID=
 CONSUMER_FIREBASE_CONFIG_MEASUREMENT_ID=
 CONSUMER_URL=
 CONSUMER_RESOURCE_ID=
-CONSUMER_PWA_NAME=
-CONSUMER_PWA_SHORT_NAME=
-CONSUMER_PWA_DESCRIPTION=
-CONSUMER_PWA_THEME_COLOR=
-CONSUMER_PWA_BACKGROUND_COLOR=
-CONSUMER_PWA_DISPLAY=
-CONSUMER_PWA_START_URL=
+CONSUMER_PWA_NAME=Kuvempu Consumer
+CONSUMER_PWA_SHORT_NAME=Kuvempu
+CONSUMER_PWA_DESCRIPTION=Kickstart Firebase Project
+CONSUMER_PWA_THEME_COLOR=#6D4C41
+CONSUMER_PWA_BACKGROUND_COLOR=#d7ccc8
+CONSUMER_PWA_DISPLAY=standalone
+CONSUMER_PWA_START_URL=/
 
 // F
 FIREBASE_CONFIG_API_KEY=
