Updated reference name from Resource Id to Hosting name

--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -16,12 +16,12 @@ jobs:
     env: 
       ADMIN_FIREBASE_CONFIG_APP_ID: ${{ secrets.ADMIN_FIREBASE_CONFIG_APP_ID }}
       ADMIN_FIREBASE_CONFIG_MEASUREMENT_ID: ${{ secrets.ADMIN_FIREBASE_CONFIG_MEASUREMENT_ID }}
-      ADMIN_RESOURCE_ID: ${{ secrets.ADMIN_RESOURCE_ID }}
+      ADMIN_HOSTING_SITE: ${{ secrets.ADMIN_HOSTING_SITE }}
       ADMIN_URL: ${{ secrets.ADMIN_URL }}
       CONSUMER_FIREBASE_CONFIG_APP_ID: ${{ secrets.CONSUMER_FIREBASE_CONFIG_APP_ID }}
       CONSUMER_FIREBASE_CONFIG_MEASUREMENT_ID: ${{ secrets.CONSUMER_FIREBASE_CONFIG_MEASUREMENT_ID }}
       CONSUMER_URL: ${{ secrets.CONSUMER_URL }}
-      CONSUMER_RESOURCE_ID: ${{ secrets.CONSUMER_RESOURCE_ID }}
+      CONSUMER_HOSTING_SITE: ${{ secrets.CONSUMER_HOSTING_SITE }}
       FIREBASE_CONFIG_API_KEY: ${{ secrets.FIREBASE_CONFIG_API_KEY }}
       FIREBASE_CONFIG_AUTH_DOMAIN: ${{ secrets.FIREBASE_CONFIG_AUTH_DOMAIN }}
       FIREBASE_CONFIG_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_CONFIG_MESSAGING_SENDER_ID }}
@@ -37,7 +37,7 @@ jobs:
       FIREBASE_SA_CLIENT_X509_CERT_URL: ${{ secrets.FIREBASE_SA_CLIENT_X509_CERT_URL }}
       REST_FIREBASE_CONFIG_APP_ID: ${{ secrets.REST_FIREBASE_CONFIG_APP_ID }}
       REST_FIREBASE_CONFIG_MEASUREMENT_ID: ${{ secrets.REST_FIREBASE_CONFIG_MEASUREMENT_ID }}
-      REST_RESOURCE_ID: ${{ secrets.REST_RESOURCE_ID }}
+      REST_HOSTING_SITE: ${{ secrets.REST_HOSTING_SITE }}
       REST_URL: ${{ secrets.REST_URL }}
 
     steps:
